--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
